# ChangeLog for dev-python/colorama
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  06 Oct 2010; James Rowe <jnrowe@gmail.com> metadata.xml:
  Added remote-id to metadata.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded x86.

  30 Sep 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded amd64.

  31 Aug 2010; James Rowe <jnrowe@gmail.com> colorama-0.1.18.ebuild:
  Keyworded ~x86.

*colorama-0.1.18 (31 Aug 2010)

  31 Aug 2010; James Rowe <jnrowe@gmail.com> +colorama-0.1.18.ebuild,
  +metadata.xml:
  Initial ebuild, by me [1fe].
