@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST colorama-0.1.18.tar.gz 9791 RMD160 2beeca198478a8ab5961f99476fbeee0e76bd61f SHA1 b6df5f1a7a74ffb316c58aada1cb2798ef51b621 SHA256 faf09b8eb3253080ed9951af08a7e9d8560ddda46567cc1a88b57e90da63f103
+DIST colorama-0.2.3.tar.gz 14667 RMD160 bfc36a6632d88e145c296de4f7bab000218078ba SHA1 9aa882310a5da844900efd8ab20cbffb852d1300 SHA256 04050b9badf460c4e61f9371f5bc8cd880d8ef3a3ea3e6d495a0ee9adc89c21c
 EBUILD colorama-0.1.18.ebuild 358 RMD160 ead69f2962a0052a7ec0b1083d1067b127bb62d6 SHA1 05e82468a3a0e9964898b4f982d2b903f0a32218 SHA256 b3e0f037418563ffb3ec609b95512ae63bef124b6398cd5c1bd0e03afabc5419
-MISC ChangeLog 720 RMD160 59f87a11cf8aac443a83d256da5004bbc149b32e SHA1 810c8d96d27a378ff71494f8002684cd3a21e016 SHA256 1c595884a86b458d6f2ebd875ee67836b3b042ab247f87e0f5861ad6cb528c3b
+EBUILD colorama-0.2.3.ebuild 516 RMD160 440a3e1df423d167e8416d60e38ea06fe26ea8b7 SHA1 0125325dd32c08cb034320c3800d5b6650418900 SHA256 8d04ab01e60e54321906554cde3ff09fc8f4af7e464ebd0010bf3b72a24781c5
+MISC ChangeLog 843 RMD160 14992ceac8b39b7831bc0beb329bcc5b90c6f391 SHA1 5dab3ce94694dfe21cbc1b62a0ded6e775712e23 SHA256 f3c90e43c36305d86e617369235cf3e44af899f7e7b90832104a6a8e765b22dd
 MISC metadata.xml 1153 RMD160 00b7c6f5d6fb0159dd103675bb0e4697261d3a2f SHA1 c007d6452f9f12596cd753cdde52558bd23539f7 SHA256 918ea6ffb28784e2347aba87791e0c8b7436fe502d8caf232f3e1e47579133e3
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk0tqlAACgkQzJrj3cAXR0k/GgCgsD1yCqxmgl4KIlX9Tz+QeYsk
-HT4AoJmfMGi6uqe9VkJuYw8BSDQtLfFu
-=2Osm
+iEYEARECAAYFAk4CM78ACgkQzJrj3cAXR0mPxACgjWDGMMTONlKdoj65eILFTcmM
+tR8AnjSbfNFxNgyN+HeUzb4njOlfXh7J
+=d6NB
 -----END PGP SIGNATURE-----
