@@ -1,0 +1,22 @@
+>=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+>=app-admin/eselect-python-20091230 || ( =dev-lang/python-3.3* =dev-lang/python-3.2* =dev-lang/python-3.1* =dev-lang/python-3.0* =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+0
+mirror://pypi/c/colorama/colorama-0.2.3.tar.gz
+
+http://pypi.python.org/pypi/colorama/
+BSD
+Cross-platform colored terminal text
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+examples
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
