@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*colorama-0.2.3 (22 Jun 2011)
+
+  22 Jun 2011; James Rowe <jnrowe@gmail.com> +colorama-0.2.3.ebuild:
+  Version bump [391].
+
   12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
   Added watch file for package updates.
 
